--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha -R spec --recursive",  
     "lint": "eslint ."
   },
   "keywords": [],
